--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>RexenGPT</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="app container bg-light h-100 w-50 p-0">
+	<div class="app container bg-light h-100 w-100 p-0">
 		<div class="screen join-screen active">
 			<div class="position-absolute top-50 start-50 translate-middle">
 				<h2 class="border-bottom border-primary mb-3">Join Chatroom</h2>
