--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="open-ai-web-bot.vercel.app/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
